--- a/src/main/resources/static/minhasPropostas.html
+++ b/src/main/resources/static/minhasPropostas.html
@@ -20,7 +20,7 @@
       <a class="navbar-brand fw-bold" href="inicio.html">
         <img src="imagens/logo.png" alt="LibertyHive" width="40" />
       </a>
-
+<!--Botoes de navegação-->
       <div class="d-flex align-items-center gap-2">
         <button type="button" class="btn btn-outline-danger btn-sm rounded-circle" title="Meus Favoritos"
           onclick="window.location.href='favoritos.html'">
@@ -31,7 +31,6 @@
           <i class="bi bi-gear"></i>
         </button>
       </div>
-
     </div>
   </header>
   <main class="container flex-grow-1 py-4">
@@ -41,13 +40,12 @@
         <i class="bi bi-arrow-left"></i> Voltar
       </button>
     </div>
-
+<!-- propostas abertas e encerradas-->
     <section>
       <h2 class="h5 text-secondary mb-3">Abertas (Pendentes)</h2>
       <div id="abertas" class="propostas-grid">
       </div>
     </section>
-
     <section class="mt-5">
       <h2 class="h5 text-secondary mb-3">Encerradas (Concluídas / Canceladas / Recusadas)</h2>
       <div id="encerradas" class="propostas-grid">
@@ -77,7 +75,7 @@
       </div>
     </div>
   </div>
-
+<!-- Modal de aviso -->
   <div class="modal fade" id="avisoModal" tabindex="-1" aria-labelledby="avisoLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content border-0 shadow-lg">
