--- a/src/main/resources/static/areaMatch.html
+++ b/src/main/resources/static/areaMatch.html
@@ -6,7 +6,7 @@
     <title>ÁreaMatch</title>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="icon" type="image/png" href="favicon.png">
-
+<!--Imports e Instancias-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+    <!--Barra superior Cabeçalho-->
     <header class="navbar bg-warning shadow-sm px-3">
         <div class="container-fluid d-flex justify-content-between align-items-center">
             <a class="navbar-brand fw-bold" href="inicio.html">
@@ -45,7 +45,7 @@
             Voltar
         </button>
     </div>
-
+<!--Conteúdo principal da pagina-->
     <main class="content">
         <h2>ÁreaMatch - Seus Matches</h2>
         <div id="matchesContainer">
@@ -53,7 +53,7 @@
         </div>
     </main>
 
-
+ <!--Pé padrão da pagina-->
     <footer class="footer mt-auto">
         <div class="container py-5">
             <div class="row gy-4">
