--- a/src/main/resources/static/cadastro.html
+++ b/src/main/resources/static/cadastro.html
@@ -10,6 +10,7 @@
      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
+    <!--Cabeçalho da pagina-->
 <header>
     <img src="./imagens/logo.png" alt="Logo Liberty Hive">
     <h1>Cadastro</h1>
