--- a/src/main/resources/static/chat.html
+++ b/src/main/resources/static/chat.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+<!--Cabeçalho-->
     <header class="navbar navbar-expand-lg bg-warning shadow-sm px-3">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold d-flex align-items-center" href="inicio.html">
@@ -56,7 +56,7 @@
                 <button id="btnProposta" class="btn btn-warning btn-sm">Informar Valor</button>
             </div>
         </div>
-
+        <!--Area do chat-->
         <main id="chatArea">
             <p>Carregando chat...</p>
         </main>
@@ -66,7 +66,7 @@
             <button id="btnEnviar" class="btn btn-warning">Enviar</button>
         </div>
     </div>
-
+<!--Rodapé da pagina-->
     <footer class="footer pt-5 mt-5">
         <div class="container footer-top d-flex flex-wrap justify-content-between pb-4">
 
