--- a/src/main/resources/static/contatos.html
+++ b/src/main/resources/static/contatos.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contatos - LibertyHive</title>
-
+<!--Bootstrap e Icones-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
-
+<!--Estilos e Ícone da aba-->
     <link rel="stylesheet" href="./Style/contatos.css">
     <link rel="icon" type="image/png" href="favicon.png" />
 </head>
-
+<!--Corpo da pagina-->
 <body>
     <header class="navbar navbar-expand-lg bg-warning shadow-sm px-3">
         <div class="container-fluid">
@@ -20,7 +20,7 @@
                 <img src="imagens/logo.png" alt="LibertyHive" width="40" class="me-2">
                 <span class="text-dark">LibertyHive</span>
             </a>
-
+<!--Botões de navegação-->
             <div class="d-flex align-items-center gap-3 ms-auto">
                 <a href="favoritos.html" class="btn btn-outline-danger btn-sm rounded-circle" title="Meus Favoritos">
                     <i class="bi bi-heart"></i>
@@ -35,7 +35,7 @@
             </div>
         </div>
     </header>
-
+<!--Conteúdo principal da pagina-->
     <main class="container my-5">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h2 class="fw-bold text-dark m-0">Seus Contatos</h2>
@@ -47,7 +47,7 @@
         <div id="listaContatos">
         </div>
     </main>
-
+<!--Rodapé da pagina-->
     <footer class="footer pt-5 mt-5">
         <div class="container footer-top d-flex flex-wrap justify-content-between pb-4">
 
@@ -66,7 +66,6 @@
                     <li><a href="./footer pages/privacidade.html">Política de Privacidade</a></li>
                 </ul>
             </div>
-
             <div class="footer-section mb-3">
                 <h5>Redes Sociais</h5>
                 <div class="d-flex gap-3 mt-2">
@@ -84,7 +83,5 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="contatos.js"></script>
-
 </body>
-
 </html>
