--- a/src/main/resources/static/favoritos.html
+++ b/src/main/resources/static/favoritos.html
@@ -7,18 +7,18 @@
     <title>Meus Favoritos</title>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="icon" type="image/png" href="favicon.png" />
-
+<!--Bootstrap e Ícones-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="./Style/styleFavoritos.css">
 </head>
-
+<!--Corpo da pagina-->
 <body class="d-flex flex-column min-vh-100">
     <header class="navbar navbar-expand-lg bg-warning shadow-sm px-3">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold" href="inicio.html">
                 <img src="imagens/logo.png" alt="LibertyHive" width="40">
-            </a>
+            </a><!--Botões de navegação-->
             <div class="d-flex align-items-center gap-3 ms-auto">
                 <button class="btn btn-outline-dark btn-sm rounded-circle" title="Configurações"
                     onclick="window.location.href='configuracao.html'">
@@ -30,6 +30,7 @@
             </div>
         </div>
     </header>
+    <!--Cabeçalho da seção de favoritos-->
     <header class="text-center py-5 bg-warning bg-gradient">
         <div class="back">
             <button onclick="voltarInicio()"><i></i> Voltar</button>
@@ -40,7 +41,7 @@
     <main class="container my-5 flex-grow-1">
         <div id="listaFavoritos" class="row g-4">
         </div>
-    </main>
+    </main><!--Rodape da pagina-->
     <footer class="footer bg-dark text-white mt-auto py-4">
         <div class="container">
             <div class="row">
