--- a/src/main/resources/static/meusItens.html
+++ b/src/main/resources/static/meusItens.html
@@ -87,7 +87,7 @@
           </div>
           <br><br>
           <label for="categoria">Escolha a categoria do seu novo item:</label>
-
+ <!-- Categorias detalhadas -->
           <select id="categoria" name="categoria">
             <optgroup label="Seção: Tecnologia">
               <option>Tecnologia</option>
